--- a/Site.master
+++ b/Site.master
@@ -13,40 +13,41 @@
 
 <body>
     <form runat="server">
-        <div class="page">
-            <div class="header">
-                <div class="title">
-                    <h1>My ASP.NET Application</h1>
-                </div>
-                <div class="loginDisplay">
-                    <asp:Panel ID="panelLogin" runat="server" Visible="false">
-                        <a href="~/Account/Login.aspx" ID="HeadLoginStatus" runat="server">Log In</a>
-                    </asp:Panel>
-                    <asp:Panel ID="panelLogout" runat="server" Visible="false">
+    <div class="page">
+        <div class="header">
+            <div class="title">
+                <h1>
+                    My ASP.NET Application
+                </h1>
+            </div>
+            <div class="loginDisplay">
+
+                <asp:Panel ID="panelLogin" runat="server" Visible="false">
+                <a href="~/Account/Login.aspx" ID="HeadLoginStatus" runat="server">Log In</a>
+                </asp:Panel>
+                <asp:Panel ID="panelLogout" runat="server" Visible="false">
                         Welcome <span class="bold">  <asp:Literal ID="LoginName" runat="server"></asp:Literal></span>!
-                        <asp:LinkButton ID="LnkLogout" runat="server" onclick="LnkLogout_Click">Logout</asp:LinkButton>
-                    </asp:Panel>
-                </div>
+                    <asp:LinkButton ID="LnkLogout" runat="server" onclick="LnkLogout_Click">Logout</asp:LinkButton>
+                </asp:Panel>
 
-                <div class="clear hideSkiplink">
-                    <asp:Menu ID="NavigationMenu" runat="server" CssClass="menu" EnableViewState="false" IncludeStyleBlock="false" Orientation="Horizontal">
-                        <Items>
-                            <asp:MenuItem NavigateUrl="~/Default.aspx" Text="Home"/>
-                        </Items>
-                    </asp:Menu>
-                </div>
             </div>
-
-            <div class="main">
-                <asp:ContentPlaceHolder ID="MainContent" runat="server"/>
+            <div class="clear hideSkiplink">
+                <asp:Menu ID="NavigationMenu" runat="server" CssClass="menu" EnableViewState="false" IncludeStyleBlock="false" Orientation="Horizontal">
+                    <Items>
+                        <asp:MenuItem NavigateUrl="~/Default.aspx" Text="Home"/>
+                    </Items>
+                </asp:Menu>
             </div>
-
-            <div class="clear">
-            </div>
-
         </div>
-        <div class="footer">
+        <div class="main">
+            <asp:ContentPlaceHolder ID="MainContent" runat="server"/>
         </div>
+        <div class="clear">
+        </div>
+    </div>
+    <div class="footer">
+
+    </div>
     </form>
 </body>
 </html>
