--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -1,5 +1,4 @@
-﻿/* DEFAULTS
-----------------------------------------------------------*/
+﻿/* DEFAULTS*/
 
 body   
 {
@@ -34,8 +33,7 @@ p
 }
 
 
-/* HEADINGS   
-----------------------------------------------------------*/
+/* HEADINGS*/
 
 h1, h2, h3, h4, h5, h6
 {
@@ -83,8 +81,7 @@ first child of the left and right table columns */
 }
 
 
-/* PRIMARY LAYOUT ELEMENTS   
-----------------------------------------------------------*/
+/* PRIMARY LAYOUT ELEMENTS*/
 
 .page
 {
@@ -139,8 +136,7 @@ first child of the left and right table columns */
 }
 
 
-/* TAB MENU   
-----------------------------------------------------------*/
+/* TAB MENU*/
 
 div.hideSkiplink
 {
@@ -187,8 +183,7 @@ div.menu ul li a:active
     text-decoration: none;
 }
 
-/* FORM ELEMENTS   
-----------------------------------------------------------*/
+/* FORM ELEMENTS*/
 
 fieldset
 {
@@ -236,8 +231,7 @@ div.accountInfo
     width: 42%;
 }
 
-/* MISC  
-----------------------------------------------------------*/
+/* MISC*/
 
 .clear
 {
